<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp"
        tools:context="com.traffickjamgeorgia.traffickjam.Youth"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/traffickJamBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:contentDescription="@string/xmltxt_main_traffickJamBanner"
            android:src="@drawable/bannerimg"
            android:clickable="true"
            android:onClick="onBtnClick"
            />

        <TextView
            android:id="@+id/title_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="16dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/store"
            android:textColor="#000000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="32dp"
            android:paddingLeft="32dp"
            android:paddingBottom="16dp"
            android:text="@string/storedescription"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/title_shirt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/shirt_education"
            android:textColor="#8B0000"
            />

        <TextView
            android:id="@+id/title_sticker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/sticker_education"
            android:textColor="#8B0000"
            />

        <TextView
            android:id="@+id/title_headband"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/headband_education"
            android:textColor="#8B0000"
            />

        <TextView
            android:id="@+id/title_wristband"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/wristband_education"
            android:textColor="#8B0000"
            />

        <ImageView
            android:id="@+id/braceletImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:contentDescription="@string/braceletdescription"
            android:src="@drawable/bracelet"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/tjbracelet"
            android:textColor="#000000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/twodollars"
            />

        <!-- Temporary button links to other activity pages -->
        <Button
            android:id="@+id/braceletBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onBtnClick"
            android:text="@string/buybracelet"/>

        <ImageView
            android:id="@+id/shirtImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:contentDescription="@string/shirtdescription"
            android:src="@drawable/shirt"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/tjshirt"
            android:textColor="#000000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/fifteendollars"
            />

        <!-- Temporary button links to other activity pages -->
        <Button
            android:id="@+id/shirtBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onBtnClick"
            android:text="@string/buyshirt"/>

        <ImageView
            android:id="@+id/tankImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:contentDescription="@string/tankdescription"
            android:src="@drawable/tank"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/tjtank"
            android:textColor="#000000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/fifteendollars"
            />

        <!-- Temporary button links to other activity pages -->
        <Button
            android:id="@+id/tankBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onBtnClick"
            android:text="@string/buytank"/>

        <ImageView
            android:id="@+id/wristbandImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:contentDescription="@string/wristbanddescription"
            android:src="@drawable/redbracelet"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/tjwristband"
            android:textColor="#000000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/fivedollars"
            />

        <!-- Temporary button links to other activity pages -->
        <Button
            android:id="@+id/wristbandBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onBtnClick"
            android:text="@string/buywristband"/>

        <ImageView
            android:id="@+id/headbandImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:contentDescription="@string/headbanddescription"
            android:src="@drawable/headband"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/tjheadband"
            android:textColor="#000000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/tendollars"
            />

        <!-- Temporary button links to other activity pages -->
        <Button
            android:id="@+id/headbandBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onBtnClick"
            android:text="@string/buyheadband"/>

        <ImageView
            android:id="@+id/decalImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:contentDescription="@string/stickerdescription"
            android:src="@drawable/sticker"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/tjdecal"
            android:textColor="#000000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/twodollars"
            />

        <!-- Temporary button links to other activity pages -->
        <Button
            android:id="@+id/decalBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onBtnClick"
            android:text="@string/buydecal"/>

    </LinearLayout>
</ScrollView>
