<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.traffickjamgeorgia.traffickjam.Contact"
    android:orientation="vertical">

    <TextView
        android:id="@+id/contact_hotlineText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="18sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/xmltxt_contact_hotlineText"
        />

    <TextView
        android:id="@+id/contact_hotlineNumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/xmltxt_contact_hotlineNumText"
        android:onClick="onBtnClick"
        />

    <TextView
        android:id="@+id/contact_titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="18sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/xmltxt_contact_titleText"
        />

    <Button
        android:id="@+id/contactBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactus"
        android:onClick="onBtnClick"
        android:layout_gravity="center" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp">

        <TableRow>

            <ImageButton
                android:id="@+id/fb_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onBtnClick"
                android:contentDescription="@string/xmltxt_contact_facebookButton"
                android:src="@drawable/facebookimg" />

            <!-- No Twitter - remove for now
            <ImageButton
                android:id="@+id/tw_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onBtnClick"
                android:contentDescription="@string/xmltxt_contact_twitterButton"
                android:src="@drawable/twitterimg" />
-->

            <ImageButton
                android:id="@+id/ig_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onBtnClick"
                android:contentDescription="@string/xmltxt_contact_instagramButton"
                android:src="@drawable/instagramimg" />

        </TableRow>

    </TableLayout>




</LinearLayout>
